--- a/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
+++ b/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
@@ -5,12 +5,132 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+<?import javafx.scene.layout.HBox?>
+<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="dci.j24e1.group1.battleships.HelloController">
     <padding>
         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
     </padding>
-
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <VBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+        <HBox>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+            <Button minWidth="30" minHeight="30" onAction="#fieldButtonClick"> </Button>
+        </HBox>
+    </VBox>
 </VBox>
