--- a/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
+++ b/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.layout.VBox?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.HBox?>
 <VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="dci.j24e1.group1.battleships.HelloController">
     <padding>
@@ -13,4 +14,12 @@
 
     <Label fx:id="welcomeText"/>
     <Button text="Hello!" onAction="#onHelloButtonClick"/>
+
+    <VBox fx:id="box1">
+
+
+    </VBox>
+
+
+
 </VBox>
