--- a/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
+++ b/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
@@ -6,16 +6,14 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.HBox?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="dci.j24e1.group1.battleships.HelloController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
+<VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml"
+      fx:controller="dci.j24e1.group1.battleships.BattleFieldsController">
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <VBox fx:id="computerBox">
 
-    <VBox fx:id="box1">
+
+    </VBox>
+    <VBox fx:id="userBox">
 
 
     </VBox>
