reworked Class Ship and other changes

--- a/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
+++ b/src/main/resources/dci/j24e1/group1/battleships/hello-view.fxml
@@ -9,10 +9,13 @@
 <VBox spacing="20.0" xmlns:fx="http://javafx.com/fxml"
       fx:controller="dci.j24e1.group1.battleships.BattleFieldsController">
 
-    <VBox fx:id="computerBox">
+    <VBox fx:id="computerBox" alignment="CENTER">
+        <Label fx:id="messageText">
 
+        </Label>
 
     </VBox>
+
     <VBox fx:id="userBox">
 
 
